force-app/main/default/objects/WelcomeCall__c/fields/After_Sale_Service_Dealer__c.field-meta.xml
<CustomField>
    <fullName>After_Sale_Service_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>After-Sale Service Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Welcome Call (After-Sale Service Dealer)</relationshipLabel>
    <relationshipName>Welcome_Call2</relationshipName>
    <type>Lookup</type>
</CustomField>