force-app/main/default/objects/WelcomeCall__c/fields/Country_Native_ID__c.field-meta.xml
<CustomField>
    <fullName>Country_Native_ID__c</fullName>
    <label>Country Native (ID)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>