force-app/main/default/objects/WelcomeCall__c/fields/Country_Native_SRV__c.field-meta.xml
<CustomField>
    <fullName>Country_Native_SRV__c</fullName>
    <label>Country Native (SRV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>