force-app/main/default/objects/WelcomeCall__c/fields/Daily_Sales_Kads_Order__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales_Kads_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Sales (Kads)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Daily_Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Welcome Call</relationshipLabel>
    <relationshipName>Welcome_Call</relationshipName>
    <type>Lookup</type>
</CustomField>