force-app/main/default/objects/WelcomeCall__c/fields/Dealer_Name_Account__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Dealer_Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Welcome Call (Dealer Name) Account</relationshipLabel>
    <relationshipName>Welcome_Call1</relationshipName>
    <type>Lookup</type>
</CustomField>