force-app/main/default/objects/WelcomeCall__c/fields/District_Native_ID__c.field-meta.xml
<CustomField>
    <fullName>District_Native_ID__c</fullName>
    <label>District Native (ID)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>