force-app/main/default/objects/WelcomeCall__c/fields/District_Native_SRV__c.field-meta.xml
<CustomField>
    <fullName>District_Native_SRV__c</fullName>
    <label>District Native (SRV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>