force-app/main/default/objects/WelcomeCall__c/fields/Kubota_App_User__c.field-meta.xml
<CustomField>
    <fullName>Kubota_App_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kubota App User</label>
    <referenceTo>Kubota_App_User__c</referenceTo>
    <relationshipLabel>Welcome Call</relationshipLabel>
    <relationshipName>Welcome_Call</relationshipName>
    <type>Lookup</type>
</CustomField>