force-app/main/default/objects/WelcomeCall__c/fields/Kubota_App_User_Lead__c.field-meta.xml
<CustomField>
    <fullName>Kubota_App_User_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kubota_App_User_Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Welcome Call</relationshipLabel>
    <relationshipName>Kubota_App_User</relationshipName>
    <type>Lookup</type>
</CustomField>