force-app/main/default/objects/WelcomeCall__c/fields/Postcode_Native_SP__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Native_SP__c</fullName>
    <label>Village Native (SP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>