force-app/main/default/objects/WelcomeCall__c/fields/Postcode_Native_SRV__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Native_SRV__c</fullName>
    <label>Postcode Native (SRV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>