force-app/main/default/objects/WelcomeCall__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Welcome Call (Product)</relationshipLabel>
    <relationshipName>Welcome_Call</relationshipName>
    <type>Lookup</type>
</CustomField>