force-app/main/default/objects/WelcomeCall__c/fields/Province_Native_ID__c.field-meta.xml
<CustomField>
    <fullName>Province_Native_ID__c</fullName>
    <label>Province Native (ID)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>