force-app/main/default/objects/WelcomeCall__c/fields/Province_Native_SRV__c.field-meta.xml
<CustomField>
    <fullName>Province_Native_SRV__c</fullName>
    <label>Province Native (SRV)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>