force-app/main/default/objects/WelcomeCall__c/fields/Sub_District_Native_ID__c.field-meta.xml
<CustomField>
    <fullName>Sub_District_Native_ID__c</fullName>
    <label>Sub District Native (ID)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>