force-app/main/default/objects/WelcomeCall__c/fields/Sub_District_Native_SP__c.field-meta.xml
<CustomField>
    <fullName>Sub_District_Native_SP__c</fullName>
    <label>Sub District Native (SP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>