force-app/main/default/objects/WelcomeCall__c/fields/Village_Native_ID__c.field-meta.xml
<CustomField>
    <fullName>Village_Native_ID__c</fullName>
    <label>Village Native (ID)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>