force-app/main/default/objects/WelcomeCall__c/fields/Welcome_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Type__c</fullName>
    <label>Welcome Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>