force-app/main/default/objects/WelcomeCall__c/recordTypes/COMBINE_HARVESTER.recordType-meta.xml
<RecordType>
    <fullName>COMBINE_HARVESTER</fullName>
    <active>true</active>
    <label>COMBINE HARVESTER (รถเกี่ยวข้าว)</label>
</RecordType>