force-app/main/default/objects/WelcomeCall__c/recordTypes/COMBINE_HARVESTER_Resolve.recordType-meta.xml
<RecordType>
    <fullName>COMBINE_HARVESTER_Resolve</fullName>
    <active>true</active>
    <label>COMBINE HARVESTER (Resolve)</label>
</RecordType>