force-app/main/default/objects/WelcomeCall__c/recordTypes/DRONE.recordType-meta.xml
<RecordType>
    <fullName>DRONE</fullName>
    <active>true</active>
    <label>DRONE</label>
</RecordType>