force-app/main/default/objects/WelcomeCall__c/recordTypes/DRONE_Resolve.recordType-meta.xml
<RecordType>
    <fullName>DRONE_Resolve</fullName>
    <active>true</active>
    <label>DRONE (Resolve)</label>
</RecordType>