force-app/main/default/objects/WelcomeCall__c/recordTypes/MINI_EXCAVATOR.recordType-meta.xml
<RecordType>
    <fullName>MINI_EXCAVATOR</fullName>
    <active>true</active>
    <label>MINI EXCAVATOR (รถขุด)</label>
</RecordType>