force-app/main/default/objects/WelcomeCall__c/recordTypes/MINI_EXCAVATOR_Resolve.recordType-meta.xml
<RecordType>
    <fullName>MINI_EXCAVATOR_Resolve</fullName>
    <active>true</active>
    <label>MINI EXCAVATOR (Resolve)</label>
</RecordType>