force-app/main/default/objects/WelcomeCall__c/recordTypes/RICE_TRANSPLANTER.recordType-meta.xml
<RecordType>
    <fullName>RICE_TRANSPLANTER</fullName>
    <active>true</active>
    <label>RICE TRANSPLANTER (รถดำนา)</label>
</RecordType>