force-app/main/default/objects/WelcomeCall__c/recordTypes/RICE_TRANSPLANTER_RESOLVE.recordType-meta.xml
<RecordType>
    <fullName>RICE_TRANSPLANTER_RESOLVE</fullName>
    <active>true</active>
    <label>RICE TRANSPLANTER (Resolve)</label>
</RecordType>