force-app/main/default/objects/WelcomeCall__c/recordTypes/SUGARCANE_HARVESTER.recordType-meta.xml
<RecordType>
    <fullName>SUGARCANE_HARVESTER</fullName>
    <active>true</active>
    <label>SUGARCANE HARVESTER (รถตัดอ้อย)</label>
</RecordType>