force-app/main/default/objects/WelcomeCall__c/recordTypes/SUGARCANE_HARVESTER_Resolve.recordType-meta.xml
<RecordType>
    <fullName>SUGARCANE_HARVESTER_Resolve</fullName>
    <active>true</active>
    <label>SUGARCANE HARVESTER (Resolve)</label>
</RecordType>