force-app/main/default/objects/WelcomeCall__c/recordTypes/TRACTOR.recordType-meta.xml
<RecordType>
    <fullName>TRACTOR</fullName>
    <active>true</active>
    <label>TRACTOR (รถแทรกเตอร์)</label>
</RecordType>