force-app/main/default/objects/WelcomeCall__c/recordTypes/TRACTOR_Resolve.recordType-meta.xml
<RecordType>
    <fullName>TRACTOR_Resolve</fullName>
    <active>true</active>
    <label>TRACTOR (Resolve)</label>
</RecordType>