force-app/main/default/objects/WelcomeCall__c/recordTypes/VEGATABLE_PLANT.recordType-meta.xml
<RecordType>
    <fullName>VEGATABLE_PLANT</fullName>
    <active>true</active>
    <label>VEGATABLE PLANT</label>
</RecordType>