force-app/main/default/objects/WelcomeCall__c/recordTypes/VEGATABLE_PLANT_Resolve.recordType-meta.xml
<RecordType>
    <fullName>VEGATABLE_PLANT_Resolve</fullName>
    <active>true</active>
    <label>VEGATABLE PLANT (Resolve)</label>
</RecordType>