force-app/main/default/objects/WelcomeCall__c/recordTypes/WelcomeCall_Oversea.recordType-meta.xml
<RecordType>
    <fullName>WelcomeCall_Oversea</fullName>
    <active>true</active>
    <label>WelcomeCall Oversea</label>
</RecordType>