force-app/main/default/objects/WelcomeCall__c/recordTypes/WelcomeCall_Oversea_Resolve.recordType-meta.xml
<RecordType>
    <fullName>WelcomeCall_Oversea_Resolve</fullName>
    <active>true</active>
    <label>WelcomeCall Oversea (Resolve)</label>
</RecordType>