force-app/main/default/objects/WelcomeCall__c/listViews/Welcome_Call_Oversea_Laos_work.listView-meta.xml
<ListView>
    <fullName>Welcome_Call_Oversea_Laos_work</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Purchase__c</columns>
    <columns>Customer__c</columns>
    <columns>Number_of_owned_car_int__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Province_ID__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Contact_status__c</columns>
    <columns>Welcome_Call_Type__c</columns>
    <columns>Reason_for_not_being_contacted__c</columns>
    <columns>Date_of_call_AD__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>WelcomeCall__c.WelcomeCall_Oversea,WelcomeCall__c.WelcomeCall_Oversea_Resolve</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>LA</value>
    </filters>
    <filters>
        <field>Contact_status__c</field>
        <operation>notEqual</operation>
        <value>Can&apos;t contact,Completed,Canceled</value>
    </filters>
    <label>Welcome Call Oversea: Laos [ทำงาน]</label>
    <sharedTo>
        <role>CRM_Agent_Laos</role>
    </sharedTo>
</ListView>