force-app/main/default/objects/WelcomeCall__c/listViews/WelcomeCallOversea_Cambodia_Repurchase.listView-meta.xml
<ListView>
    <fullName>WelcomeCallOversea_Cambodia_Repurchase</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Purchase__c</columns>
    <columns>Customer__c</columns>
    <columns>Number_of_owned_car_int__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Province_ID__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Contact_status__c</columns>
    <columns>Welcome_Call_Type__c</columns>
    <columns>Reason_for_not_being_contacted__c</columns>
    <columns>Date_of_call_AD__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>WelcomeCall__c.WelcomeCall_Oversea,WelcomeCall__c.WelcomeCall_Oversea_Resolve</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>KH</value>
    </filters>
    <filters>
        <field>Contact_status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Can&apos;t contact,Canceled</value>
    </filters>
    <filters>
        <field>Number_of_owned_car_int__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>WelcomeCallOversea: Cambodia[Repurchase]</label>
    <sharedTo>
        <group>User_Iyhou_C</group>
        <group>User_Molika_O</group>
        <group>User_Sokha_S</group>
    </sharedTo>
</ListView>